<resources>
    <string name="app_name">CarpinTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_extended">Pronostico Extendido</string>
    <string name="diasemana">DiaSemana</string>
    <string name="hora">Hora</string>
    <string name="temperatura">20</string>
    <string name="celsius">°c</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
</resources>