<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="8dp"
    android:id="@+id/card_current_weather"
    tools:context=".presentation.ui.fragments.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nombre_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_mono"
            android:hint="@string/diasemana"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_derecha"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linea_vertical_izquierda"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:hint="@string/hora"
            android:textSize="52sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_derecha"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nombre_dia"
            app:layout_constraintTop_toBottomOf="@+id/nombre_dia"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imagen_clima"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_derecha"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linea_vertical_izquierda"
            app:layout_constraintTop_toBottomOf="@+id/hora"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/valor_temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/temperatura"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/linea_vertical_central"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_central"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linea_vertical_izquierda"
            app:layout_constraintTop_toTopOf="@+id/linea_vertical_central" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/grados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/celsius"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/valor_temperatura"
            app:layout_constraintStart_toEndOf="@+id/valor_temperatura"
            app:layout_constraintTop_toTopOf="@+id/valor_temperatura" />

        <View
            android:id="@+id/linea_vertical_central"
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@color/gris"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_derecha"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="@+id/linea_vertical_izquierda"
            app:layout_constraintTop_toBottomOf="@+id/imagen_clima"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/estado_clima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/estado"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/linea_vertical_central"
            app:layout_constraintEnd_toStartOf="@+id/linea_vertical_derecha"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/linea_vertical_central"
            app:layout_constraintTop_toTopOf="@+id/linea_vertical_central" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/ciudad"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/estado_clima"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/estado_clima"
            app:layout_constraintTop_toBottomOf="@+id/estado_clima"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/linea_vertical_izquierda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/linea_vertical_derecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>